force-app/main/default/objects/CS_Ship_To_Contact_Relation__c/CS_Ship_To_Contact_Relation__c.object-meta.xml
<CustomObject>
    <description>This is the junction object to relate contact to ship to. The relation between this object and contact &amp; Ship To is maintained as lookup relation so that the record in this object can be edited.</description>
    <label>Ship To Contact Relation</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Ship To Contact Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ship To Contact Relation</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>