force-app/main/default/objects/CS_Ship_To_Contact_Relation__c/fields/CS_Commercial_Account__c.field-meta.xml
<CustomField>
    <fullName>CS_Commercial_Account__c</fullName>
    <description>Commercial Account associated with the Ship To.</description>
    <formula>HYPERLINK($Label.CS_Protein_Customer_Service_Lightning_URL &amp; &#39;/lightning/r/Account/&#39; &amp;  CS_Ship_To__r.Commercial_Account__r.Id  &amp; &#39;/view&#39; , CS_Ship_To__r.Commercial_Account__r.Name)</formula>
    <label>Commercial Account</label>
    <type>Text</type>
</CustomField>