force-app/main/default/objects/CS_Ship_To_Contact_Relation__c/fields/CS_Contact__c.field-meta.xml
<CustomField>
    <fullName>CS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact related to same commercial account as that of Ship To.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related Ship To&#39;s</relationshipLabel>
    <relationshipName>Ship_To_Contact_Relation</relationshipName>
    <type>Lookup</type>
</CustomField>