force-app/main/default/objects/CS_Ship_To_Contact_Relation__c/fields/CS_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>CS_Contact_Email__c</fullName>
    <description>Related Contact&#39;s Standard Email.</description>
    <formula>CS_Contact__r.Email</formula>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>