force-app/main/default/objects/CS_Ship_To_Contact_Relation__c/fields/CS_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>CS_Contact_Phone__c</fullName>
    <description>Related Contact&#39;s Standard Phone.</description>
    <formula>CS_Contact__r.Phone</formula>
    <label>Contact Phone</label>
    <type>Text</type>
</CustomField>