force-app/main/default/objects/CS_Ship_To_Contact_Relation__c/fields/CS_Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>CS_Contact_Status__c</fullName>
    <description>Related Contact&#39;s Status Field Value.</description>
    <formula>TEXT(CS_Contact__r.Status__c)</formula>
    <label>Contact Status</label>
    <type>Text</type>
</CustomField>