force-app/main/default/objects/CS_Ship_To_Contact_Relation__c/fields/CS_ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>CS_ERP_Number__c</fullName>
    <description>Related Ship To&#39;s ERP Number Field Value.</description>
    <formula>CS_Ship_To__r.ERP_Number__c</formula>
    <label>ERP Number</label>
    <type>Text</type>
</CustomField>