force-app/main/default/objects/CS_Ship_To_Contact_Relation__c/fields/CS_Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>CS_Legacy_Id__c</fullName>
    <description>Related Ship To&#39;s Legacy ID Field Value.</description>
    <formula>CS_Ship_To__r.Legacy_Id__c</formula>
    <label>Legacy Id</label>
    <type>Text</type>
</CustomField>