force-app/main/default/objects/CS_Ship_To_Contact_Relation__c/fields/CS_Legacy_System__c.field-meta.xml
<CustomField>
    <fullName>CS_Legacy_System__c</fullName>
    <description>Related Ship To&#39;s ERP Number Field Value</description>
    <formula>TEXT(CS_Ship_To__r.Legacy_System__c)</formula>
    <label>Legacy System</label>
    <type>Text</type>
</CustomField>