force-app/main/default/objects/CS_Ship_To_Contact_Relation__c/fields/CS_Ship_To__c.field-meta.xml
<CustomField>
    <fullName>CS_Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ship To related to same commercial account as that of contact.</description>
    <label>Ship To</label>
    <referenceTo>Ship_To__c</referenceTo>
    <relationshipLabel>Related Contacts</relationshipLabel>
    <relationshipName>Ship_To_Contact_Relation</relationshipName>
    <type>Lookup</type>
</CustomField>