force-app/main/default/objects/CS_Ship_To_Contact_Relation__c/fields/CS_Ship_To_Status__c.field-meta.xml
<CustomField>
    <fullName>CS_Ship_To_Status__c</fullName>
    <description>Related Ship To&#39;s Status Field Value.</description>
    <formula>TEXT(CS_Ship_To__r.Status__c)</formula>
    <label>Ship To Status</label>
    <type>Text</type>
</CustomField>